--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="title"><img src="./assets/rocket.svg" /></div>
         <div>
           <form action="">
-            <input
+            <input class="data"
               type="text"
               name="task"
               placeholder="Nombre de la tarea"
@@ -36,15 +36,10 @@
           </form>
         </div>
         <ul class="cardsList">
-          <li class="card">
-            <div>
-              <i class="far fa-check-square icon"></i>
-              <span class="task">Hacer curso de DOM</span>
-            </div>
-            <i class="fas fa-trash-alt trashIcon icon"></i>
-          </li>
+          
         </ul>
       </div>
     </main>
+    <script src="app.js"></script>
   </body>
 </html>
