--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="title"><img src="./assets/rocket.svg" /></div>
         <div>
           <form action="">
-            <input class="data"
+            <input 
               type="text"
               name="task"
               placeholder="Nombre de la tarea"
